--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,11 @@
   	<li><a href="http://www..../news">News</a></li>
   	<li><a href="http://www..../contact">Contact</a></li>
       </ul>
+			<% if @cart %>
+				<div id="cart">
+					<%= render @cart %>
+				</div>
+			<% end %>
     </div>
     <div id="main">
       <%= yield %>
