--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
   	<li><a href="http://www..../contact">Contact</a></li>
       </ul>
 			<% if @cart %>
-				<div id="cart">
-					<%= render @cart %>
-				</div>
+				<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+  				<%= render @cart %>
+				<% end %>
 			<% end %>
     </div>
     <div id="main">
